--- a/16 - Manejo de DOM HTML con JavaScript/Aceso a DOM HTML desde JavaScript.html
+++ b/16 - Manejo de DOM HTML con JavaScript/Aceso a DOM HTML desde JavaScript.html
@@ -7,11 +7,34 @@
     <title>Manejo de DOM con JavaScript</title>
 </head>
 <body>
-    <h1 id="Cabecero" <!----></h1>>Este es un Ejemplo de DOM con JavaScript</h1>
-    <p>Saludos Amigos!</p>
+    <!--creamos un identificador de cabecera para trabajar con javascript-->
+    <h1 id="Cabecero">Este es un Ejemplo de DOM con JavaScript</h1>
+    <p id="Parrafo">Saludos Amigos!</p>
+    <p id="Parrafo2">Como estan</p>
+    <p id="Parrafo3">Yo estoy Bien</p>
 
     <script>
         console.log('Saludos desde JS')
+        //  Creamos variables para almacenar los elementos del html y los asociamos por su ID, Acedemos al valor con .innerHTML
+        // let cabecera = document.getElementById('Cabecero').innerHTML;
+        // let parrafo = document.getElementById('Parrafo').innerHTML;
+
+        // //Para mostrar en consola
+        // console.log(`Cabecero: ${cabecera.innerHTML}`);
+        // console.log(`Parrafo: ${parrafo.innerHTML}`);
+
+
+        //podemos modificar el valor de los elementos si los declaramos asi 
+        let cabecera = document.getElementById('Cabecero');
+        let parrafo = document.getElementById('Parrafo');
+        //para declarar el nuevo valor:
+        cabecera.innerHTML = "Hola Buenas";
+        parrafo.innerHTML = "Joan Lozano";
+
+        // //Para mostrar en consola
+        console.log(`Cabecero: ${cabecera.innerHTML}`);
+        console.log(`Parrafo: ${parrafo.innerHTML}`);
+
     </script>
 </body>
 </html>
