--- a/19 - Aplicacion Presupuesto con JavaScript/index.html
+++ b/19 - Aplicacion Presupuesto con JavaScript/index.html
@@ -108,6 +108,12 @@
         </div>
     </div>
 
+    <div class="foot">
+        <footer>
+            Creado - Joan Lozano &copy; 2022
+        </footer>
+    </div>
+
     <script src='js/Dato.js'></script>
     <script src='js/Ingreso.js'></script>
     <script src='js/Egreso.js'></script>
